--- a/email-templates/adminCommunityCreated.html
+++ b/email-templates/adminCommunityCreated.html
@@ -42,14 +42,14 @@
 
   <p><strong>New community:</strong></p>
   <ul>
-    <li><a href="https://community.tryretool.com/{{community.slug}}">{{community.name}}</a></li>
+    <li><a href="https://tryretool.com/community/{{community.slug}}">{{community.name}}</a></li>
     <li>About: {{community.description}}</li>
     <li>Website: <a href="{{community.website}}">{{community.website}}</a></li>
   </ul>
 
   <p><strong>Creator:</strong></p>
   <ul>
-    <li><a href="https://community.tryretool.com/users/{{user.username}}">{{user.name}}</a></li>
+    <li><a href="https://tryretool.com/community/users/{{user.username}}">{{user.name}}</a></li>
     <li>About: {{user.description}}</li>
     <li>Joined Spectrum: {{user.createdAt}}</li>
     <li>Email: <a href="mailto:{{user.email}}">{{user.email}}</a></li>
