--- a/email-templates/communityInvite.html
+++ b/email-templates/communityInvite.html
@@ -385,7 +385,7 @@
                 <!-- Body content -->
                 <tr>
                   <td class="content-cell">
-                    <p>{{sender.name}} has invited you to join the <a href="https://community.tryretool.com/{{community.slug}}">{{community.name}}
+                    <p>{{sender.name}} has invited you to join the <a href="https://tryretool.com/community/{{community.slug}}">{{community.name}}
                         community</a> on Spectrum! Join now to get started.</p>
                   </td>
                 </tr>
@@ -427,7 +427,7 @@
 
                 <tr>
                   <td class="footer-cell">
-                    <a class="button" href="https://community.tryretool.com/{{joinPath}}">Join {{community.name}}</a>
+                    <a class="button" href="https://tryretool.com/community/{{joinPath}}">Join {{community.name}}</a>
                   </td>
                 </tr>
               </table>
@@ -443,7 +443,7 @@
                 </li>
 
                 <li>
-                  <a href="https://community.tryretool.com/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://community.tryretool.com/spectrum/feature-requests">Request
+                  <a href="https://tryretool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://tryretool.com/community/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
