--- a/email-templates/privateChannelRequestApproved.html
+++ b/email-templates/privateChannelRequestApproved.html
@@ -378,8 +378,8 @@
                 <!-- Body content -->
                 <tr>
                   <td class="content-cell">
-                    <p>Your request to join the <a href="https://community.tryretool.com/{{data.community.slug}}/{{data.channel.slug}}">{{data.channel.name}}
-                        channel</a> in the <a href="https://community.tryretool.com/{{data.community.slug}}">{{data.community.name}}
+                    <p>Your request to join the <a href="https://tryretool.com/community/{{data.community.slug}}/{{data.channel.slug}}">{{data.channel.name}}
+                        channel</a> in the <a href="https://tryretool.com/community/{{data.community.slug}}">{{data.community.name}}
                         community</a> was approved! You can now join any conversations happening in this channel.</p>
                   </td>
                 </tr>
@@ -389,7 +389,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-actions multi">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle">
-                          <a href="https://community.tryretool.com/{{data.community.slug}}/{{data.channel.slug}}" class="button">
+                          <a href="https://tryretool.com/community/{{data.community.slug}}/{{data.channel.slug}}" class="button">
                             View Channel
                           </a>
                         </td>
@@ -406,7 +406,7 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://community.tryretool.com">Spectrum</a>.
+                You are receiving this email because you joined <a href="https://tryretool.com/community">Spectrum</a>.
               </p>
 
               <ul>
@@ -415,7 +415,7 @@
                 </li>
 
                 <li>
-                  <a href="https://community.tryretool.com/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://community.tryretool.com/spectrum/feature-requests">Request
+                  <a href="https://tryretool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://tryretool.com/community/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
